Implement test endpoints for the new occalls
